# treadmill

./: .dockerignore  .gitignore  AGENTS.md  CONSOLE_PROTOTYPE_PLAN.md  Cargo.toml  LICENSE-MIT  README.md  TODOS.md  flake.nix  migration-generator.sh  rust-toolchain.toml  shell.nix  treadmill.toml
cli/: Cargo.toml  README.md  config.example.toml
cli/src/: auth.rs  config.rs  main.rs
connector/cli/: Cargo.toml
connector/http/: Cargo.toml
connector/local/: Cargo.toml
connector/ws/: Cargo.toml
console/: Cargo.toml  config.example.toml  eslint.config.js  package-lock.json  package.json  tsconfig.json
console/app/: app.css  env.d.ts  root.tsx  routes.ts
console/src/: assets.rs  config.rs  lib.rs  serve.rs  session.rs
images/check/: Cargo.toml
images/util/: Cargo.toml
puppet/: Cargo.toml
puppet/src/: control_socket_client.rs  main.rs
supervisor/lib/: Cargo.toml
supervisor/mock/: Cargo.toml  config.example.toml
supervisor/qemu/: .gitignore  Cargo.toml  README.md  config.example.toml
switchboard/: .dev-env  AUDIT_LOG_PLAN.md  Cargo.toml  FIXTURES.sql  OAUTH_LOGIN_PLAN.md  README.md  SCHEMA.sql  USER_MANAGEMENT_PLAN.md  build.rs  config.example.toml  database-shell.nix  httpie.env  migrate.sh  req.sh  sql-formatter.json  todo-list.txt
switchboard-macros/: Cargo.toml
switchboard-macros/src/: lib.rs
switchboard/.sqlx/: query-026a8f1b2cfe1d1429fcc2dd714eb740173bb356ba89a346845c2049a173e803.json  query-03a58959e5157b4666ddc706931d26c6e136b85b80b6edc52a0c7a80ef9b7875.json  query-050aaafb2c63a0eb12a0a9bf2d63609cb7e4c2b9ceb47e67983ea62785f4abcd.json  query-07ca4b7b2d61c09acdc5e0a3f4ad0b573c444a0464add06611ce732ec2c872e8.json  query-0dbb7982a9f4099e7ab405f1d918dbe90a7928565109c16584f86e54f5494be6.json  query-2185269643f541cef1e3edc863e30cb72d4dcca5ee22d61daf5841ba12d2b613.json  query-25693e9a40d126b8fdba9cbd64fc5e529e14182fb364a6c926ac6d90825fe37a.json  query-32c67e6a3c34cd57ce0f7b6c1bfbb4199a86cfe9285cac5f3adbfa716997b785.json  query-3df982b06f1687d965339b803ac2486fb27dc472ebb70c1408cb3b67e9589d6c.json  query-4123c4ea9d43b06d6cf312ca488dc88c9de3b15a25143bb009114a02ee5b4088.json  query-4805fe89967525da2a395a40fc0a1e9b55d69a720d3e6ba97f3f7ff15dab189f.json  query-4c83d3f0717d8111cb692cb51bcfb5564d97acb4ac217997e0dd17ea3d5fc5dc.json  query-510ce21b732fb782ad3a516ea2a2d667d214c03f095c389e0bb08c0f4e4380f8.json  query-59fab7efe4a47ba2a9c1ef28aa8ccb4369d504b1ce690fe29004ea82b96fa646.json  query-635bfeb843658c28cf5ec6f3be6143a384ff6d043df7414f3c194fbc69acc7c4.json  query-63d259298c7e33a91e9a989e6e16c87ef9b1e509ff1059901767821804179fd7.json  query-667a55531c0d8e07927c1bfbd9aee42b5715a35bc901bf3c1c49c87b0c269124.json  query-6dd0daa22bd94faa35146332dfbb3a2d7f3322359d7294ccd8cc08ad00c0630c.json  query-756f2179c0bb44e401a7ef3325b163606367a4efc94cbe169c95715abf58aae6.json  query-862777d03b7d4d0489a3e914fa683054ce3d87b1da6d564d189b9dea87aefb36.json  query-94d4287de33a33b5509b195288f7c66ea1b84ccc78a9712486b41e6cbb224544.json  query-9c367afdd5bba2cad8192196261e40b8b3eb2383e46b9b4b231a1abbae68d0d3.json  query-a497c1da5c7f7abfab69325d2d03b13600f46c2cd1942790226e39de3fbf4f9e.json  query-a8e77f93aba28ac00befb1df1f89d70a5bc3f47c7a907a49ca5759afdfefddf6.json  query-abfc485cbf124689a7030bb6102a40ab47bddb9b77bf27c13abea60b1a130d28.json  query-bd4432a6497961349578a23dbec146546d0feae4d6ce385c43a4b1c29bf5a61e.json  query-c9e985565d657a574293fd6b29ea88d769a9eb7c7e315752c714eed7cd18d060.json  query-ca309fe5905d673af84a4dc0b640aac6ec629fb32fdec5aad8f917691f17ad46.json  query-d5de364bc5a2bffe4c7767b7e3d2ab8dda9906362b0f288362c9b5f1b2c9bb38.json  query-d9398950eadca4a2cbda800827b77d6c15e27d31b50bd69c6757534f14ccc139.json  query-db00ca45547399c9211a84391a28944caaf27a3995c1356abf28f04a78dce847.json  query-dc2bf134264baec90a298bb49ef44d19f8a442b8d6103ae95b71a332406cf74a.json  query-e8e04d34a448aa2cea825da2c513172d14dcb94a98ad449e9bb0ab1af51dc996.json  query-eb7b8587d870fd47dc88ad09cb36cdb4162441b92382c4b06c9e07819d508baf.json  query-f0c71fdfac4a48fd78b0d5f5d57556e738b54cceea1c4e9b41da11d4057fba32.json  query-f53d4bc4e1ee9cdefa063a757241adc8a77791a8918e461a0f57a68e405f25bb.json  query-f87587f6a4b96fca23190be7053c189c25ce4647a8fe6611242170ed64580ecf.json  query-fabd8a94017093fa4ba761028157450ce261f49b31809983294350cbe0752a17.json  query-fcbe5b465add1d48aa1d2512a8ac1c66ebb998ca927d10f759bd188494c44ef0.json
switchboard/api-spec/: openapi.json  openapi.yaml
switchboard/cli/: Cargo.toml  README.md  config.example.toml
switchboard/conf/: config.example.hjson
switchboard/conf-example/: config.example.toml
switchboard/coord-serve/: Cargo.toml
switchboard/flyio/: Dockerfile  dockerignore  fly.dev.toml  fly.toml
switchboard/migrations/: 00000000000001_base.sql  20250113224121_add_host_job_ssh_endpoints.sql  20250210235044_ssh_endpoint_host_port_struct.sql  20260526025722_add_supervisor_worker_state.sql  20260530225202_decompose_job_state_and_termination.sql  20260530231324_supervisor_current_job_unique.sql  20260531050759_remove_job_events_history_table.sql  20260531183310_add_oauth_login.sql  20260601000802_add_principals_fn.sql  20260601002700_rename_supervisor_to_host.sql  20260601014415_seed_system_actor_subject.sql  20260601015052_add_audit_log.sql  20260605041704_add_token_provenance.sql  20260605120000_rename_token_cancellation_to_revocation.sql  20260607033816_oci_image_catalog.sql  20260607151311_tag_based_host_target_matching.sql  20260607200907_host_liveness_heartbeat.sql  20260607203700_scheduler_eligible_hosts.sql  20260608031705_add_job_cancel_requested.sql  20260614025116_add_jobs_listing_index.sql  20260621174200_image_groups_mutable_generations.sql  20260621211154_image_group_public.sql  20260629045509_add_image_group_audit_entity_kind.sql  20260704040624_add_login_admission.sql  20260704182005_pending_registration_secret.sql  20260704182005_staged_login_secret.sql  20260704211548_login_return_to.sql  20260708035542_everyone_subject.sql  20260708120000_image_sources.sql  20260708153836_image_set_rename.sql  20260709090000_images_title.sql  atlas.sum  (+7 more)
treadmill-rs/: Cargo.toml
(+683 files in other folders)
