[workspace]
resolver = "2"
members = [
    "cli",
    "connector/ws",
    "control-socket/tcp/client",
    "control-socket/tcp/server",
    "puppet",
    "supervisor/lib",
    "supervisor/mock",
    "supervisor/nbd-netboot",
    "supervisor/qemu",
    "switchboard",
    "treadmill-rs",
]

[workspace.package]
version = "0.1.0"
authors = ["Treadmill Project Developers <treadmill@tockos.org>"]
edition = "2024"

[workspace.lints.clippy]
complexity = { level = "deny", priority = -1 }
type_complexity = "allow"
result_large_err = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
from_str_radix_10 = "allow"