[workspace]
resolver = "2"
members = [
  "cli",
  "connector/ws",
  "console",
  "control-socket/tcp/client",
  "control-socket/tcp/server",
  "puppet",
  "supervisor/lib",
  "supervisor/nbd-netboot",
  "supervisor/qemu",
  "switchboard",
  "treadmill-rs",
]

# Test fixture built only by `nix/tiny-efi.nix` for a foreign target
# (aarch64-unknown-uefi). It carries its own Cargo.lock and an empty
# `[workspace]` table; excluding it here keeps cargo and crane from treating it
# as a workspace member.
exclude = ["nix/fixtures/tiny-efi"]

[workspace.package]
version = "0.1.0"
authors = ["Treadmill Project Developers <treadmill@tockos.org>"]
edition = "2024"

[workspace.metadata.crane]
name = "treadmill"

[workspace.dependencies]
# Internal crates (declared here so members can use `workspace = true` and
# don't have to repeat relative path strings).
treadmill-rs = { path = "treadmill-rs", version = "0.3.0" }
treadmill-console = { path = "console" }
treadmill-supervisor-lib = { path = "supervisor/lib" }
treadmill-tcp-control-socket-client = { path = "control-socket/tcp/client" }
treadmill-tcp-control-socket-server = { path = "control-socket/tcp/server" }
treadmill-ws-connector = { path = "connector/ws" }

# Shared third-party dependencies. Versions here are floors; per-member
# Cargo.toml selects features and may set `default-features = false`.
anyhow = "1.0.76"
async-trait = "0.1.81"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.38"
clap = "4.5.24"
futures = { version = "0.3.30", default-features = false }
futures-util = "0.3.30"
http = "1.1.0"
humantime-serde = "1.1.1"
insta = "1"
log = "0.4.22"
oci-client = "0.17.0"
oci-spec = { version = "0.10.0", default-features = false, features = [
  "image",
] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
schemars = "1"
serde = "1.0.204"
serde_json = "1.0.120"
serde_with = "3.8.1"
sha2 = "0.10"
subtle = "2.6.1"
tempfile = "3"
thiserror = "2"
# tokio/tokio-util have no meaningful default features; declare false so
# members that want a minimal feature set (the supervisors, control-socket)
# don't need to repeat the override, and Cargo forbids per-member overrides
# anyway when `workspace = true`.
tokio = { version = "1.38.0", default-features = false }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", default-features = false }
toml = "1.1.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
uuid = "1.9.1"

[workspace.lints.clippy]
complexity = { level = "deny", priority = -1 }
type_complexity = "allow"
result_large_err = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
from_str_radix_10 = "allow"
