[package]
name = "treadmill-cli"
version = "0.3.1"
edition.workspace = true

authors.workspace = true
categories = ["command-line-utilities", "development-tools::testing"]
description = "CLI client for the Treadmill distributed hardware testbed"
homepage = "https://treadmill.ci"
keywords = ["ci", "testing", "testbed", "hardware", "embedded"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "tml"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
dirs = "3.0"
toml = "0.5"
hex = "0.4"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
xdg = "2.5.2"
ssh2 = "0.9.4"
base64 = "0.22.1"
clap = { version = "4.5.24", features = ["derive"] }
rpassword = "7.3.1"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

[dependencies.treadmill-rs]
package = "treadmill-rs"
version = "0.3.0"
path = "../treadmill-rs"

[lints]
workspace = true
