[package]
name = "treadmill-cli"
version = "0.3.1"
edition.workspace = true

authors.workspace = true
categories = ["command-line-utilities", "development-tools::testing"]
description = "CLI Client for the Treadmill Distributed Hardware Testbed"
homepage = "https://treadmill.ci"
keywords = ["ci", "testing", "testbed", "hardware", "embedded"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "tml"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
