[package]
name = "treadmill-puppet"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "tml-puppet"
path = "src/main.rs"

[features]
default = ["transport_tcp"]

transport_tcp = ["treadmill-tcp-control-socket-client"]

[dependencies]
treadmill-rs = { workspace = true }

treadmill-tcp-control-socket-client = { workspace = true, optional = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
sd-notify = "0.4.2"
simplelog = "0.12.1"
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "sync",
  "process",
  "io-util",
  "time",
  "signal",
] }
uuid = { workspace = true, features = ["serde"] }
zbus = "4.4.0"

[lints]
workspace = true
