[package]
name = "treadmill-switchboard"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { workspace = true }

# For debugging reasons
console-subscriber = "0.5.0"

# Utility
uuid = { workspace = true, features = ["serde", "fast-rng", "v4"] }
chrono = { workspace = true, features = ["serde"] }
# because cookie-rs has an unavoidable hard dependency on time::Duration
time = "0.3.47"

# Database
sqlx = { version = "0.9.0", features = [
  "uuid",
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "chrono",
  "ipnetwork",
] }

# Server
axum = { version = "0.8.9", features = [
  "tokio",
  "http2",
  "json",
  "tracing",
  "ws",
  "macros",
] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
headers = "0.4.0"
http = { workspace = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["trace", "sensitive-headers"] }

# Tokio
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures-util = { workspace = true, features = ["sink"] }

# Lock-free hashmap
dashmap = "6.0.1"

async-trait = { workspace = true }

# Used for token comparison
subtle = { workspace = true }
# Used for password verification
argon2 = "0.6.0-rc.8"
# CSPRNG
rand = { workspace = true }

# Logging facilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Command line arguments
clap = { workspace = true, features = ["derive", "error-context", "env"] }

# Configuration overlays
figment = { version = "0.10.19", features = ["toml", "env"] }

# General serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
humantime-serde = { workspace = true }
# Configuration deserialization
toml = { workspace = true }

# Error derives
thiserror = { workspace = true }
# TODO: Phase out
miette = { version = "7.6", features = ["fancy"] }
base64 = { workspace = true }
anyhow.workspace = true

[dev-dependencies]
sqlx-cli = { version = "0.9.0", features = [
  "postgres",
  "rustls",
  "completions",
] }
# Activate the `macros` feature on tokio for tests only — `#[sqlx::test]`
# expands to `#[tokio::test]`, which requires it. Non-test builds stay
# slim.
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
