[package]
name = "treadmill-rs"
version = "0.3.0"
edition.workspace = true

authors.workspace = true
categories = ["api-bindings"]
description = "Common type- and API-definitions for the Treadmill distributed hardware testbed"
homepage = "https://treadmill.ci"
keywords = ["ci", "testing", "testbed", "hardware", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fundu = { version = "2.0.0", features = ["chrono", "serde"] }
http = { workspace = true }
schemars = { workspace = true, features = ["chrono04", "uuid1"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex", "base64"] }
subtle = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
