[package]
name = "treadmill-rs"
version = "0.3.0"
edition.workspace = true

authors.workspace = true
categories = ["api-bindings"]
description = "Common type- and API-definitions for the Treadmill distributed hardware testbed"
homepage = "https://treadmill.ci"
keywords = ["ci", "testing", "testbed", "hardware", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fundu = { version = "2.0.0", features = ["chrono", "serde"] }
http = { workspace = true }
oci-spec = { workspace = true }
schemars = { workspace = true, features = ["chrono04", "uuid1"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex", "base64"] }
subtle = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

# Optional: the `client` feature pulls in an async HTTP client so binaries (the
# web console, an eventual CLI) can call the switchboard API and get the shared
# types back. Off by default so the supervisor/puppet/connector crates don't
# pull reqwest.
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "charset",
  "http2",
], optional = true }
thiserror = { workspace = true, optional = true }

[features]
# A typed HTTP client for the switchboard REST API (see api::switchboard::client).
client = ["dep:reqwest", "dep:thiserror"]

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
