[package]
name = "tml-http-connector"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { version = "0.1.0", path = "../../treadmill-rs" }
async-trait = "0.1.75"
serde = { version = "1.0.193", features = [ "derive" ] }
uuid = { version = "1.6.1", features = [ "serde", "v4" ] }
reqwest = { version = "0.12.5", default-features = false, features = [ "json", "rustls-tls" ] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [ "full" ] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
