[package]
name = "treadmill-local-connector"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { workspace = true }

async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
humantime = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
