[package]
name = "tml-ws-connector"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { path = "../../treadmill-rs" }

uuid = { version = "1.9.1", features = ["v4", "rng"] }
chrono = "0.4.38"

tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-native-roots"] }
base64 = "0.22.1"
futures-util = { version = "0.3.30", features = ["sink"] }

rustls = { version = "0.23.11", features = [] }

tracing = "0.1.40"

serde = "1.0.204"
serde_json = "1.0.120"

thiserror = "1.0.61"
rand = { version = "0.9.0-alpha.1", features = ["getrandom"] }
async-trait = "0.1.80"