[package]
name = "treadmill-ws-connector"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
humantime-serde = { workspace = true }
rand = { workspace = true }
rustls = { version = "0.23.11", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "fs",
  "time",
] }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-native-roots"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "rng"] }

[lints]
workspace = true
