[package]
name = "treadmill-image-check"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"
description = "Validate a built Treadmill OCI image layout against its expected shape"

[[bin]]
name = "image-check"
path = "src/main.rs"

[dependencies]
treadmill-rs = { workspace = true }
oci-spec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
