[package]
name = "treadmill-supervisor-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
toml = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
