[package]
name = "treadmill-supervisor-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { workspace = true }

anyhow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
oci-client = { workspace = true }
oci-spec = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "process",
  "net",
  "io-util",
  "io-std",
  "time",
] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
tempfile = { workspace = true }
# Re-list tokio so tests get the runtime/macros on top of the lib's features.
tokio = { workspace = true, features = [
  "fs",
  "process",
  "net",
  "io-util",
  "io-std",
  "macros",
  "rt-multi-thread",
  "time",
] }

[lints]
workspace = true
