[package]
name = "tml-mock-supervisor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# This uses nightly Cargo feature, which breaks a whole bunch of things (including cargo fmt)
# tml-puppet = { path = "../../puppet", artifact = "bin" }

treadmill-rs = { path = "../../treadmill-rs" }
tml-tcp-control-socket-server = { path = "../../control-socket/tcp/server" }
tml-cli-connector = { path = "../../connector/cli" }
tml-ws-connector = { path = "../../connector/ws" }

tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "process", "fs"] }
toml = "0.8.8"
uuid = "1.6.1"
serde = { version = "1.0.193", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
simplelog = "0.12.1"
log = "0.4.20"
async-trait = "0.1.75"
anyhow = "1.0.76"
