[package]
name = "treadmill-mock-supervisor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# This uses nightly Cargo feature, which breaks a whole bunch of things (including cargo fmt)
# tml-puppet = { path = "../../puppet", artifact = "bin" }

treadmill-rs = { path = "../../treadmill-rs" }
treadmill-tcp-control-socket-server = { path = "../../control-socket/tcp/server" }
treadmill-ws-connector = { path = "../../connector/ws" }

tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "process", "fs"] }
toml = "0.8.8"
uuid = "1.6.1"
serde = { version = "1.0.193", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
async-trait = "0.1.75"
anyhow = "1.0.76"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
