[package]
name = "treadmill-mock-supervisor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# This uses nightly Cargo feature, which breaks a whole bunch of things (including cargo fmt)
# tml-puppet = { path = "../../puppet", artifact = "bin" }

treadmill-rs = { workspace = true }
treadmill-tcp-control-socket-server = { workspace = true }
treadmill-ws-connector = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "process", "fs"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
