[package]
name = "treadmill-qemu-supervisor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { path = "../../treadmill-rs" }
treadmill-tcp-control-socket-server = { path = "../../control-socket/tcp/server" }
treadmill-ws-connector = { path = "../../connector/ws" }
treadmill-supervisor-lib = { path = "../lib" }

tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "process", "fs"] }
toml = "0.8.8"
uuid = "1.6.1"
serde = { version = "1.0.193", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
async-trait = "0.1.75"
anyhow = "1.0.76"
strfmt = "0.2.4"
async-recursion = "1.1.1"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
