[package]
name = "treadmill-qemu-supervisor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treadmill-rs = { workspace = true }
treadmill-supervisor-lib = { workspace = true }
treadmill-tcp-control-socket-server = { workspace = true }
treadmill-ws-connector = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
strfmt = "0.2.4"
tokio = { workspace = true, features = ["rt-multi-thread", "process", "fs"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
oci-spec = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
