[package]
name = "switchboard-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = "2.33"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
dirs = "3.0"
shellexpand = "2.1"
toml = "0.5"
hex = "0.4"
treadmill-rs = { path = "../../treadmill-rs" }

[dependencies.tml-switchboard]
path = "../switchboard"
